# hydro2.0

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  1.md  AGENTS.md  AUDIT_AI_DIGITAL_TWIN.md  AUDIT_AI_DIGITAL_TWIN_SUMMARY.md  AUDIT_BACKEND_CORE_04.md  AUDIT_BACKEND_LARAVEL.md  AUDIT_DATA_AND_STORAGE_05.md  AUDIT_DOMAIN_FIXES_SUMMARY.md  AUDIT_DOMAIN_ZONES_RECIPES.md  AUDIT_DOMAIN_ZONES_RECIPES_06.md  AUDIT_FIXES_SUMMARY.md  AUDIT_PROJECT_FULL.md  AUDIT_SUMMARY.md  BUGS_COMPLETE_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CURRENT_STATUS_AUDIT.md  DEBUG_CHECKLIST.md  DEPLOYMENT.md  DEVELOPER_QUICK_RUN.md  DEVELOPMENT_PRIORITIES.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_FINAL_CHECK_REPORT.md  DOCUMENTATION_SYNC_REPORT.md  ERROR_HANDLING_IMPLEMENTATION.md  ERROR_REPORTING_AUDIT.md  ERROR_REPORTING_FINAL_REPORT.md  ERROR_REPORTING_IMPLEMENTATION_SUMMARY.md  ETAP5_CHECK.md  FIXES_RECOMMENDED.md  G501_F14.b00  G501_F14_b01.hex  GROK.md  INTEGRATION_TESTS_REPORT.md  INTEGRATION_TESTS_RESULTS.md  LOGGING_REFACTORING_REPORT.md  (+33 more)
.claude/: settings.json
.cursor/: mcp.json
.tmp_ci_logs/: 0_build-and-test.txt
.tmp_ci_logs_53433948321/: 0_build-and-test.txt
artifacts/: frontend_audit_2026-02-19.md
backend/: .env.example  .env.prod.example  ALL_ERRORS_FIXED.md  ARCHITECTURE_IMPROVEMENTS_FINAL_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS_OPTIMISTIC_UPDATES_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS_PHASE2_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS_PHASE3_SUMMARY.md  ARCHITECTURE_PRINCIPLES.md  AUDIT_ACTION_PLAN.md  BACKEND_AUDIT_REPORT.md  BUILD_ERROR_SUMMARY.md  BUILD_PROGRESS.md  CHAIN_STATUS_FIXES.md  CHANGELOG.md  COMMAND_PALETTE_IMPROVEMENTS.md  CONFIG_FIX_SUMMARY.md  CONTAINER_ERRORS_FIXED.md  CRITICAL_IMPROVEMENTS_IMPLEMENTATION.md  CYCLE_BUGS_FIXED.md  (+114 more)
firmware/nodes/climate_node/main/: CMakeLists.txt  climate_node_app.c  climate_node_app.h  climate_node_defaults.h  climate_node_framework_integration.c  climate_node_framework_integration.h  climate_node_init.c  climate_node_init.h  climate_node_init_steps.c  climate_node_init_steps.h  climate_node_tasks.c  main.c  pwm_driver.c  pwm_driver.h
firmware/nodes/common/components/node_framework/: AUDIT_REPORT.md  CMakeLists.txt  ERROR_REPORTING_GUIDE.md  Kconfig  README.md  node_command_handler.c  node_config_handler.c  node_config_utils.c  node_framework.c  node_link_loss_failsafe.c  node_state_manager.c  node_telemetry_engine.c  node_watchdog.c
firmware/nodes/common/components/node_framework/include/: node_command_handler.h  node_config_handler.h  node_config_utils.h  node_framework.h  node_link_loss_failsafe.h  node_state_manager.h  node_telemetry_engine.h  node_watchdog.h
firmware/nodes/common/components/sensors/trema_ph/: CMakeLists.txt  README.md  trema_ph.c
firmware/nodes/common/components/sensors/trema_ph/include/: trema_ph.h
firmware/nodes/common/components/sensors/trema_ph/reference/: README.md
firmware/nodes/ec_node/main/: CMakeLists.txt  ec_node_app.c  ec_node_app.h  ec_node_channel_map.c  ec_node_channel_map.h  ec_node_defaults.h  ec_node_framework_integration.c  ec_node_framework_integration.h  ec_node_init.c  ec_node_init.h  ec_node_init_steps.c  ec_node_init_steps.h  ec_node_tasks.c  main.c
firmware/nodes/light_node/main/: CMakeLists.txt  light_node_app.c  light_node_app.h  light_node_channel_map.c  light_node_channel_map.h  light_node_config_utils.c  light_node_config_utils.h  light_node_defaults.h  light_node_framework_integration.c  light_node_framework_integration.h  light_node_init.c  light_node_init.h  light_node_init_steps.c  light_node_init_steps.h  light_node_tasks.c  main.c
firmware/nodes/ph_node/main/: CMakeLists.txt  main.c  ph_node_app.c  ph_node_app.h  ph_node_callbacks.c  ph_node_callbacks.h  ph_node_channel_map.c  ph_node_channel_map.h  ph_node_command_handler.c  ph_node_command_handler.h  ph_node_config_handler.c  ph_node_config_handler.h  ph_node_defaults.h  ph_node_framework_integration.c  ph_node_framework_integration.h  ph_node_handlers.c  ph_node_handlers.h  ph_node_init.c  ph_node_init.h  ph_node_init_steps.c  ph_node_init_steps.h  ph_node_setup.c  ph_node_setup.h  ph_node_tasks.c  ph_node_tasks.h  ph_node_telemetry.c  ph_node_telemetry.h  pump_control.c  pump_control.h
firmware/nodes/pump_node/main/: CMakeLists.txt  main.c  pump_node_app.c  pump_node_app.h  pump_node_defaults.h  pump_node_framework_integration.c  pump_node_framework_integration.h  pump_node_init.c  pump_node_init.h  pump_node_init_steps.c  pump_node_init_steps.h  pump_node_tasks.c
firmware/nodes/relay_node/main/: CMakeLists.txt  main.c  relay_node_app.c  relay_node_app.h  relay_node_defaults.h  relay_node_framework_integration.c  relay_node_framework_integration.h  relay_node_handlers.c  relay_node_handlers.h  relay_node_hw_map.c  relay_node_hw_map.h  relay_node_init.c  relay_node_init.h  relay_node_init_steps.c  relay_node_init_steps.h  relay_node_tasks.c
firmware/nodes/storage_irrigation_node/main/: CMakeLists.txt  main.c  storage_irrigation_fw_actuators.c  storage_irrigation_fw_commands.c  storage_irrigation_fw_events.c  storage_irrigation_fw_fail_safe.c  storage_irrigation_fw_integration.c  storage_irrigation_fw_internal.h  storage_irrigation_fw_level_switch.c  storage_irrigation_fw_pump_cmd.c  storage_irrigation_fw_stage_guards.c  storage_irrigation_fw_state.c  storage_irrigation_node_app.c  storage_irrigation_node_app.h  storage_irrigation_node_channel_map.c  storage_irrigation_node_channel_map.h  storage_irrigation_node_config.c  storage_irrigation_node_config.h  storage_irrigation_node_config_utils.c  storage_irrigation_node_config_utils.h  storage_irrigation_node_defaults.h  storage_irrigation_node_framework_integration.c  storage_irrigation_node_framework_integration.h  storage_irrigation_node_init.c  storage_irrigation_node_init.h  storage_irrigation_node_init_steps.c  storage_irrigation_node_init_steps.h  storage_irrigation_node_tasks.c
firmware/test_node/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  test_node_app.c  test_node_app.h  test_node_ui.c  test_node_ui.h
(+4727 files in other folders)
