idf_component_register(
    SRCS 
        "main.c"
        "test_node_app.c"
        "test_node_ui.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        mqtt_manager
        config_storage
        setup_portal
        node_utils
        json
        wifi_manager
        freertos
        esp_timer
        esp_system
        esp_wifi
        driver
        esp_lcd
        esp_lcd_ili9341
        lvgl
)
