idf_component_register(
    SRCS
        "main.c"
        "climate_node_app.c"
        "climate_node_tasks.c"
        "pwm_driver.c"
        "climate_node_framework_integration.c"
        "climate_node_init.c"
        "climate_node_init_steps.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        mqtt_manager
        wifi_manager
        config_storage
        config_apply
        node_framework
        node_utils
        init_steps_utils
        relay_driver
        i2c_bus
        sht3x
        ccs811
        oled_ui
        setup_portal
        heartbeat_task
        connection_status
        factory_reset_button
        driver
        esp_wifi
        nvs_flash
        esp_netif
        esp_event
        freertos
        mqtt
        esp_timer
        json
        mbedtls
)
