idf_component_register(
    SRCS 
        "main.c"
        "ph_node_app.c"
        "ph_node_tasks.c"
        "ph_node_init.c"
        "ph_node_handlers.c"
        "pump_control.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        mqtt_manager
        wifi_manager
        config_storage
        trema_ph
        i2c_bus
        oled_ui
        setup_portal
        heartbeat_task
        connection_status
        driver
        esp_wifi
        nvs_flash
        esp_netif
        esp_event
        freertos
        mqtt
        esp_timer
        json
)

