idf_component_register(
    SRCS 
        "main.c"
        "ph_node_app.c"
        "ph_node_tasks.c"
        "ph_node_init.c"
        "ph_node_init_steps.c"
        "ph_node_framework_integration.c"
        "ph_node_channel_map.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        mqtt_manager
        wifi_manager
        config_storage
        config_apply
        node_framework
        node_utils
        log_throttle
        trema_ph
        i2c_bus
        ina209
        oled_ui
        setup_portal
        heartbeat_task
        connection_status
        pump_driver
        factory_reset_button
        driver
        esp_wifi
        nvs_flash
        esp_netif
        esp_event
        freertos
        mqtt
        esp_timer
        json
        mbedtls
)
