idf_component_register(
    SRCS 
        "main.c"
        "pump_node_app.c"
        "pump_node_tasks.c"
        "pump_node_framework_integration.c"
        "pump_node_init.c"
        "pump_node_init_steps.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        mqtt_manager
        wifi_manager
        config_storage
        config_apply
        node_framework
        node_utils
        pump_driver
        i2c_bus
        ina209
        oled_ui
        setup_portal
        heartbeat_task
        connection_status
        factory_reset_button
        driver
        esp_wifi
        nvs_flash
        esp_netif
        esp_event
        freertos
        mqtt
        esp_timer
        json
        mbedtls
)
